[package]
name = "terralink_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.82"
byteorder = "1.4.3"
flume = "0.10.13"
anyhow = "1.0.59"
async-trait = "0.1.57"
log = "0.4.17"

[dependencies.log4rs]
version = "1.1.1"
features = ["gzip"]

[dependencies.toml]
version = "0.5.9"

[dependencies.serde]
version = "1.0.139"
features = ["derive"]

[dependencies.tokio]
version = "1.20.0"
features = ["full"]